--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,28 +22,15 @@
   Learn how to configure a non-root public URL by running `npm run build`.
 -->
     <!-- Primary Meta Tags -->
-    <title>Meta Tags — Preview, Edit and Generate</title>
-    <meta name="title" content="Meta Tags — Preview, Edit and Generate">
-    <meta name="description"
-          content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-
+    <title>Specialists Services Catalog</title>
+    <meta name="title" content="Specialists Services Catalog">
+    <meta name="description" content="Specialists Services Catalog">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/">
-    <meta property="og:title" content="Meta Tags — Preview, Edit and Generate">
-    <meta property="og:description"
-          content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-    <meta property="og:image"
-          content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/">
-    <meta property="twitter:title" content="Meta Tags — Preview, Edit and Generate">
-    <meta property="twitter:description"
-          content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-    <meta property="twitter:image"
-          content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:url" content="https://ssc.sameca.tech">
+    <meta property="og:title" content="Specialists Services Catalog">
+    <meta property="og:description" content="Specialists Services Catalog">
+    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
