--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,14 +23,15 @@
 -->
     <!-- Primary Meta Tags -->
     <title>Specialists Services Catalog</title>
-    <meta name="title" content="Specialists Services Catalog">
-    <meta name="description" content="Specialists Services Catalog">
+    <meta content="Specialists Services Catalog" name="title">
+    <meta content="Specialists Services Catalog" name="description">
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ssc.sameca.tech">
-    <meta property="og:title" content="Specialists Services Catalog">
-    <meta property="og:description" content="Specialists Services Catalog">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta content="website" property="og:type">
+    <meta content="https://ssc.sameca.tech" property="og:url">
+    <meta content="Specialists Services Catalog" property="og:title">
+    <meta content="Specialists Services Catalog" property="og:description">
+    <meta content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+          property="og:image">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
