--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,7 +30,7 @@
     <meta content="https://ssc.sameca.tech" property="og:url">
     <meta content="Specialists Services Catalog" property="og:title">
     <meta content="Specialists Services Catalog" property="og:description">
-    <meta content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    <meta content="https://drive.google.com/file/d/1qnQsrGcLH4gntZPyaBgJq7zloHdJxfxO/view?usp=sharing"
           property="og:image">
 </head>
 <body>
