--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,7 +30,7 @@
     <meta content="https://ssc.sameca.tech" property="og:url">
     <meta content="Specialists Services Catalog" property="og:title">
     <meta content="Specialists Services Catalog" property="og:description">
-    <meta content="https://drive.google.com/file/d/1qnQsrGcLH4gntZPyaBgJq7zloHdJxfxO/view?usp=sharing"
+    <meta content="https://i.ibb.co/xGf30Yy/ssc-sameca-tech-browse.png"
           property="og:image">
 </head>
 <body>
